Fix spacing among checkbox

--- a/f2/src/theme/style.css
+++ b/f2/src/theme/style.css
@@ -290,7 +290,6 @@ body {
 /*Checkboxes and Radio Buttons*/
 
 .custom-control {
-  height: 2.5rem;
   line-height: 2.5rem;
 }
 
